pizza gallery row gap fix (adaptive)

--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -401,9 +401,11 @@ li {
     }
     @media screen and (max-width: 840px) {
         grid-template-columns: 280px;
+        grid-row-gap: 45px;
     }
     @media screen and (max-width: 420px) {
         grid-template-columns: 1fr;
+        grid-row-gap: 30px;
     }
 }
 
